pkg/ibmvpc/examples/out/analysis_out/sg_testing_3_all_vpcs_.txt
Connectivity for VPC test-vpc-ky
Public Internet (all ranges) => proxy-ky[10.240.0.4] : All Connections
be-ky[10.240.128.5] => opa-ky[10.240.128.4] : protocol: TCP dst-ports: 8181
be-ky[10.240.128.5] => policydb-endpoint-gateway[10.240.128.7] : protocol: TCP
be-ky[10.240.128.5] => policydb-endpoint-gateway[10.240.64.4] : protocol: TCP
fe-ky[10.240.128.6] => be-ky[10.240.128.5] : protocol: TCP
proxy-ky[10.240.0.4] => fe-ky[10.240.128.6] : protocol: UDP dst-ports: 9000
